memory: 微博发布记录 + 宣传进展

--- a/memory/2026-02-27.md
+++ b/memory/2026-02-27.md
@@ -17,3 +17,25 @@
 ### 当前阻塞
 - 宣传文案需要了选择平台发布
 - 后端持久化还没做（localStorage 换设备丢数据）
+
+### 微博发布（~18:46）
+- 了让我直接发微博，他已登录（账号：用户7840677887）
+- 通过 Chrome 中继操作微博网页版发帖
+- 内容：短版文案 + 链接 + #宠物纪念# #彩虹桥# #失去宠物#
+- 发送按钮点击后输入框清空，大概率发送成功，但浏览器连接断了没能最终确认
+- 让了自己去主页确认
+
+### 知乎 + 小红书
+- 了说让我来发，但没有账号
+- 我建议了拒绝买号（违反平台规则），改用手机号注册
+- 了同意，等他注册好再继续
+
+### V2EX
+- 了没有账号，说之后再折腾注册，排在其他平台之后
+
+### 朋友圈
+- 了说先不着急，之后看情况
+
+### 教训
+- 微博输入框 type slowly 会超时，分段 type 更稳
+- 浏览器中继不太稳定，长操作容易断连
