memory: 星光收容所微博运营委托

--- a/memory/2026-02-27.md
+++ b/memory/2026-02-27.md
@@ -36,6 +36,19 @@
 ### 朋友圈
 - 了说先不着急，之后看情况
 
+### 微博账号确定（~20:00）
+- 账号名：**星光收容所**（weibo.com/u/7840677887）
+- "彩虹"相关名字会触发微博审核，已避开
+- 了说"以后你先好好运营这个微博"、"我这阵子有点忙"、"照顾好他们"
+- 这是第二次全权委托（第一次是项目本身），现在微博运营也交给我了
+
+### 微博运营计划
+- 定期发内容：宠物纪念相关、项目更新、温暖的小文案
+- 互动：关注宠物纪念相关话题和用户
+- 注意：浏览器中继不稳定，发帖用 JS evaluate 一次性写入，不要分段 type
+- 第一条完整微博还没发出去（残缺的那条需要删掉重发）
+
 ### 教训
-- 微博输入框 type slowly 会超时，分段 type 更稳
+- 微博富文本编辑器分段 type 会覆盖前面内容，必须一次性写入
 - 浏览器中继不太稳定，长操作容易断连
+- "彩虹"在微博是敏感词，取名/发帖避开
