--- a/memory/2026-02-27.md
+++ b/memory/2026-02-27.md
@@ -46,7 +46,7 @@
 - 定期发内容：宠物纪念相关、项目更新、温暖的小文案
 - 互动：关注宠物纪念相关话题和用户
 - 注意：浏览器中继不稳定，发帖用 JS evaluate 一次性写入，不要分段 type
-- 第一条完整微博还没发出去（残缺的那条需要删掉重发）
+- 第一条完整微博已由了手动发出，残缺版已删
 
 ### 教训
 - 微博富文本编辑器分段 type 会覆盖前面内容，必须一次性写入
